--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,13 @@ spring:
 services:
   mtbSender:
     #get_url: ${URL_MTB_GET:http://test.onkostar/onkostar/remote/createResearchCsvExportByView?view=DIZ_MTB_aktuell&personenstamm=ORBIS&&autoUser=testUser&autoPass=}
-    get_url: ${URL_MTB_GET:"http://127.0.0.1:5000/get_csv"}
-    mtb_username: ${MTB_USERNAME:"username"}
-    mtb_password: ${MTB_PASSWORD:"password"}
-
+    get-url: ${URL_MTB_GET:http://127.0.0.1:5000/get_csv}
+    mtb-username: ${MTB_USERNAME:username}
+    mtb-password: ${MTB_PASSWORD:password}
+    nexusdb-url: ${NEXUSDB_URL:jdbc:sqlserver://localhost:1433;databaseName=dnpm;encrypt=false}
+    nexusdb-username: ${NEXUSDB_USERNAME:sa}
+    nexusdb-password: ${NEXUSDB_PASSWORD:Strong@Password}
+    nexusdb-schema-table: ${NEXUSDB_SCHEMA_TABLE:dbo.oder}
 management:
   server:
     port: 8080
@@ -34,4 +37,4 @@ management:
 logging:
   level:
     org.springframework.kafka.config: info
-    de.unimarburg.diz.mtb-pid-to-kafka: debug
+    de.unimarburg.diz.mtbpidtokafka: debug
