ci: run release on successful build only

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ["build & test"]
+    workflows: ["build"]
     branches: "main"
     types: [completed]
   release:
