--- a/deploy/sample.env
+++ b/deploy/sample.env
@@ -1,3 +1,6 @@
+# Docker imager version
+VERSION=
+
 #kafka
 BOOTSTRAP_SERVERS=
 SECURITY_PROTOCOL=
@@ -8,7 +11,6 @@ MTB_PID_NEXUS_ODER_ID_TOPIC=
 #services
 URL_MTB_GET=
 MTB_USERNAME=
+MTB_PASSWORD=
 NEXUSDB_URL=
 NEXUSDB_PASSWORD=
-NEXUSDB_SCHEMA_TABLE=
-NEXUSDB_CLIENT_NAME=
