--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
 	// spring boot
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
+	implementation 'org.yaml:snakeyaml:2.2'
 
 	// metrics
 	implementation 'io.micrometer:micrometer-registry-prometheus'
