--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,20 +10,15 @@ spring:
       key-store-location: file://${MTB_PID_TO_KAFKA_SSL_KEY_STORE_LOCATION:/opt/kafka-streams-template/ssl/keystore.jks}
       key-store-password: ${MTB_PID_TO_KAFKA_SSL_KEY_STORE_PASSWORD}
     producer:
-      value-serializer: de.unimarburg.diz.mtbpidtokafka.configuration.MtbPidNexusOderIdKafkaSerialiser
-      topic: ${MTB_PID_NEXUS_ODER_ID_TOPIC:mtb-pid-nexus-oder-id}
+      #value-serializer: de.unimarburg.diz.mtbpidtokafka.configuration.MtbPidInfoKafkaSerialiser
+      topic: ${MTB_PID_NEXUS_ODER_ID_TOPIC:mtb-pid-info}
 
 services:
   mtbSender:
-    get-url: ${URL_MTB_GET:http://127.0.0.1:5000/get_csv}
+    get-url: ${URL_MTB_GET:http://localhost}
     mtb-username: ${MTB_USERNAME:username}
-    mtb-password: ${MTB_PASSWORD:password}
-    mtb-fetch-metrics: ${MTB_FETCH_METRICS:10000}
-    nexusdb-url: ${NEXUSDB_URL:jdbc:sqlserver://localhost:1433;databaseName=dnpm;encrypt=false}
-    nexusdb-username: ${NEXUSDB_USERNAME:sa}
-    nexusdb-password: ${NEXUSDB_PASSWORD:Strong@Password}
-    sql-statement: ${SQL_STATEMENT:sql_statement}
-
+    mtb-password: ${MTB_PASSWORD:mypass}
+    mtb-fetch-metrics: ${MTB_FETCH_METRICS:100000}
 
 management:
   server:
