--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,10 @@ plugins {
 
 group = 'de.unimarburg.diz'
 version = '0.0.2-SNAPSHOT'
-
-//java {
-//	sourceCompatibility = JavaVersion.VERSION_21
-//	targetCompatibility = JavaVersion.VERSION_21
-//}
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
 	mavenCentral()
@@ -60,7 +59,7 @@ dependencies {
 	// spring boot
 	implementation "org.springframework.boot:spring-boot-starter-web"
 	implementation "org.springframework.boot:spring-boot-starter-actuator"
-	implementation 'org.yaml:snakeyaml:2.2'
+	//implementation 'org.yaml:snakeyaml:2.2'
 
 	// metrics
 	implementation 'io.micrometer:micrometer-registry-prometheus'
